fixing breaking build

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -5,11 +5,11 @@
 //@import "~todc-bootstrap/less/todc-bootstrap.less";
 
 //@import "~bootstrap/less/mixins.less";
-@import "~bootstrap/less/bootstrap.less";
+//@import "~bootstrap/less/bootstrap.less";
 //@import "todc-bootstrap.less";
 
 /* font-awesome: */
-@import "~font-awesome/less/font-awesome.less";
+//@import "~font-awesome/less/font-awesome.less";
 
 /* Bootstrap 3 Material: */
 //@import "~bootstrap-material-design/less/material.less";
